# tauri-vision

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
docs/: tauri-learning-guide.md  tauri2-awesome-examples.md
src/: App.tsx  main.tsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md
src-tauri/resources/python/: inference.py
src-tauri/resources/scripts/: cifar10_val.py  medicine_val.py  mushroom_val.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cruds.rs  db_api.rs  file_management.rs  image_processing.rs  mod.rs  model_management.rs  save_image_history.rs
src-tauri/src/config/: constants.rs  models.rs
src-tauri/src/core/: api.rs  mod.rs  python.rs
src-tauri/src/db/: db_client.rs  histories_collection.rs  images_collection.rs  mod.rs
src-tauri/src/models/: dto.rs  inference_result.rs  mod.rs
src-tauri/src/services/: mod.rs  model_manager.rs  python.rs
src-tauri/src/utils/: env_utils.rs  file.rs  mod.rs  network.rs  path_utils.rs
src/components/: Layout.tsx  Navbar.tsx  Sidebar.tsx  theme-toggle.tsx
src/components/custom/: error-boundary.tsx  history-filters.tsx  history-pagination.tsx  history-stats.tsx  history-table.tsx  model-selector.tsx  title-bar.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  popover.tsx  progress.tsx  select.tsx
src/hooks/: useImageHistory.tsx  useImageRecognition.ts  useModels.ts
src/lib/: types.ts
src/pages/: Dashboard.tsx  ImageHistory.tsx  ImageRecognition.tsx  ModelSettings.tsx  UserSetting.tsx
src/styles/: global.css
