[package]
name = "vision-match"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
[lib]
name = "vision_match"
path = "src/lib.rs"
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2 基础依赖 - 所有权限通过能力系统管理
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0" 
log = "0.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"] }
mongodb = "3.2.1"
thiserror = "1.0"
mac_address = "1.1"
once_cell = "1.18"
bson = "2.7"
dotenv = "0.15.0"
sha2 = "0.10.8"
